added courses page and buttons

--- a/app_interface/views/layouts/main.handlebars
+++ b/app_interface/views/layouts/main.handlebars
@@ -9,6 +9,26 @@
     <link rel="stylesheet" href="stylesheets/styles.css" />
   </head>
 
+  <header>
+    <nav class = "w-screen bg-indigo-300 h-20 flex items-center justify-between">
+      
+      <div id = "CS-Logo" class = "text-4xl text-white m-4">
+        Course Signal
+      </div>
+
+      <div class = "flex justify-evenly items-center">
+        <button class = "bg-indigo-700 text-white rounded-2xl shadow mx-4 w-56 h-14">
+          Students
+        </button>
+
+        <button class = "bg-indigo-700 text-white rounded-2xl shadow mx-4 w-56 h-14">
+          Courses
+        </button>
+      </div>
+
+    </nav>
+  </header>
+
   {{{body}}}
 
   </html>
