--- a/app_interface/views/courses.handlebars
+++ b/app_interface/views/courses.handlebars
@@ -1,3 +1,5 @@
+<link rel = "stylesheet" href = "stylesheets/modal.css">
+
 
 <div class="flex flex-col items-center justify-center m-2">
 
@@ -10,11 +12,53 @@
     <div class="p-4 bg-blue-50">
 
       {{!-- Add course button --}}
-      <button class = "bg-indigo-400 text-white rounded-2xl shadow mx-4 w-56 h-14">
+      <button id = "modal_open" class = "bg-indigo-400 text-white rounded-2xl shadow mx-4 w-56 h-14">
         Add Course
       </button>
+
+      {{!-- Add course modal --}}
+      <div id = "modal" class = "modal">
+        <div class="bg-blue-100 w-96 justify-self-center h-72">
+          <div class = "bg-indigo-400 w-full flex justify-between px-4 text-lg text-white">
+            <h1 class = >Add a New Course</h2>
+            <button id = "modal_close" class = "text-white">x</button>
+          </div>
+
+          <form id="add-course" method="POST" onsubmit="return false;">
+            <div class="inline-flex flex-col p-4 space-y-4 bg-blue-100">
+              <div>
+                <label for="title" class="inline-block w-32 mr-2 text-right">
+                  Title:
+                </label>
+                <input type="text" id="title" name="title" placeholder="Martian Economics"/>
+              </div>
+              <div>
+                <label for="subject" class="inline-block w-32 mr-2 text-right">
+                  Subject:
+                </label>
+                <input type="text" id="subject" name="subject" placeholder="ECON"/>
+              </div>
+              <div>
+                <label for="course-number" class="inline-block w-32 mr-2 text-right">
+                  Course Number:
+                </label>
+                <input type="text" id="course-number" name="course-number" placeholder="425"/>
+              </div>
+              <div>
+                <label for="section" class="inline-block w-32 mr-2 text-right">
+                  Section:
+                </label>
+                <input type="text" id="section" name="section" placeholder="2"/>
+              </div>
+              <input class="self-end p-2 bg-indigo-400 text-white rounded-xl shadow" type="submit" value="Add Course" />
+            </div>
+          </form>
+        </div>
+      </div>
 
     </div>
   </div>
 </div>
+
+<script src="javascripts/modal.js"></script>
 
