Less rounded corners on buttons

--- a/app_interface/views/layouts/main.handlebars
+++ b/app_interface/views/layouts/main.handlebars
@@ -17,11 +17,11 @@
       </div>
 
       <div class = "flex justify-evenly items-center">
-        <button class = "bg-indigo-700 text-white rounded-2xl shadow mx-4 w-56 h-14">
+        <button class = "bg-indigo-700 text-white rounded-xl shadow mx-4 w-56 h-14">
           Students
         </button>
 
-        <button class = "bg-indigo-700 text-white rounded-2xl shadow mx-4 w-56 h-14">
+        <button class = "bg-indigo-700 text-white rounded-xl shadow mx-4 w-56 h-14">
           Courses
         </button>
       </div>
