Changed form Input css

--- a/app_interface/views/courses.handlebars
+++ b/app_interface/views/courses.handlebars
@@ -30,25 +30,25 @@
                 <label for="title" class="inline-block w-32 mr-2 text-right">
                   Title:
                 </label>
-                <input type="text" id="title" name="title" placeholder="Martian Economics"/>
+                <input type="text" id="title" name="title" placeholder="Martian Economics" class = "focus:outline-none focus:placeholder-transparent"/>
               </div>
               <div>
                 <label for="subject" class="inline-block w-32 mr-2 text-right">
                   Subject:
                 </label>
-                <input type="text" id="subject" name="subject" placeholder="ECON"/>
+                <input type="text" id="subject" name="subject" placeholder="ECON" class = "focus:outline-none focus:placeholder-transparent"/>
               </div>
               <div>
                 <label for="course-number" class="inline-block w-32 mr-2 text-right">
                   Course Number:
                 </label>
-                <input type="text" id="course-number" name="course-number" placeholder="425"/>
+                <input type="text" id="course-number" name="course-number" placeholder="425" class = "focus:outline-none focus:placeholder-transparent"/>
               </div>
               <div>
                 <label for="section" class="inline-block w-32 mr-2 text-right">
                   Section:
                 </label>
-                <input type="text" id="section" name="section" placeholder="2"/>
+                <input type="text" id="section" name="section" placeholder="2" class = "focus:outline-none focus:placeholder-transparent"/>
               </div>
               <input class="self-end p-2 bg-indigo-400 text-white rounded-xl shadow" type="submit" value="Add Course" />
             </div>
