added input shadow

--- a/app_interface/views/assignments.handlebars
+++ b/app_interface/views/assignments.handlebars
@@ -29,7 +29,7 @@
                 <label for="title" class="w-32 mr-2 text-right">
                     Title:
                 </label>
-                <input type="text" id="title" name="title" placeholder="HW 1 - Sample Title" class = "focus:outline-none focus:placeholder-transparent"/>
+                <input type="text" id="title" name="title" placeholder="HW 1 - Sample Title" class = "focus:outline-none focus:placeholder-transparent shadow"/>
             </div>
             <input class="p-2 bg-indigo-400 text-white rounded-xl shadow self-end mx-4" type="submit" value="Add Assignment" />
           </form>
