--- a/app_interface/views/courses.handlebars
+++ b/app_interface/views/courses.handlebars
@@ -11,12 +11,12 @@
     {{!-- Box --}}
     <div class="p-4 bg-blue-50">
 
-      {{!-- Add course button --}}
+      {{!-- Add-course button --}}
       <button id = "modal_open" class = "bg-indigo-400 text-white rounded-2xl shadow mx-4 w-56 h-14">
         Add Course
       </button>
 
-      {{!-- Add course modal --}}
+      {{!-- Add-course modal --}}
       <div id = "modal" class = "modal">
         <div class="bg-blue-100 w-96 justify-self-center h-72">
           <div class = "bg-indigo-400 w-full flex justify-between px-4 text-lg text-white">
