--- a/app_interface/views/classes.handlebars
+++ b/app_interface/views/classes.handlebars
@@ -3,24 +3,27 @@
 
 <div class="flex flex-col items-center justify-center m-2">
 
-  {{!-- Courses Div--}}
+  {{!-- Classes Div--}}
   <div class="w-4/6">
 
-    <h1 class="text-5xl">Courses</h1>
+    <h1 class="text-5xl">Classes</h1>
 
     {{!-- Box --}}
     <div class="p-4 bg-blue-50">
 
-      {{!-- Add-course button --}}
+      {{!-- Add-class button --}}
       <button id = "modal_open" class = "bg-indigo-400 text-white rounded-2xl shadow mx-4 w-56 h-14">
-        Add Course
+        Add Class
       </button>
 
-      {{!-- Add-course modal --}}
+      {{!-- Display Class Data --}}
+      
+
+      {{!-- Add-Class modal --}}
       <div id = "modal" class = "modal">
         <div class="bg-blue-100 w-96 justify-self-center h-72">
           <div class = "bg-indigo-400 w-full flex justify-between px-4 text-lg text-white">
-            <h1 class = >Add a New Course</h2>
+            <h1 class = >Add a New Class</h2>
             <button id = "modal_close" class = "text-white">x</button>
           </div>
 
