--- a/app_interface/views/layouts/main.handlebars
+++ b/app_interface/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
         </button>
 
         <button class = "bg-indigo-700 text-white rounded-xl shadow mx-4 w-56 h-14">
-          Courses
+          Classes
         </button>
       </div>
 
