--- a/app_interface/views/layouts/main.handlebars
+++ b/app_interface/views/layouts/main.handlebars
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
   <head>
@@ -6,22 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CourseSignal</title>
-    <link rel="stylesheet" href="stylesheets/styles.css" />
+    <link rel="stylesheet" href="/stylesheets/styles.css" />
   </head>
 
   <header>
-    <nav class = "w-screen bg-indigo-300 h-20 flex items-center justify-between">
-      
-      <div id = "CS-Logo" class = "text-4xl text-white m-4">
-        Course Signal
+    <nav class="flex items-center justify-between w-screen h-20 bg-indigo-300">
+
+      <div id="CS-Logo" class="m-4 text-4xl text-white">
+        <a href="/">Course Signal</a>
       </div>
 
-      <div class = "flex justify-evenly items-center">
-        <button class = "bg-indigo-700 text-white rounded-xl shadow mx-4 w-56 h-14">
+      <div class="flex items-center justify-evenly">
+        <button
+          class="w-56 mx-4 text-white bg-indigo-700 shadow rounded-xl h-14"
+        >
           Students
         </button>
 
-        <button class = "bg-indigo-700 text-white rounded-xl shadow mx-4 w-56 h-14">
+        <button
+          class="w-56 mx-4 text-white bg-indigo-700 shadow rounded-xl h-14"
+        >
           Courses
         </button>
       </div>
@@ -31,4 +34,4 @@
 
   {{{body}}}
 
-  </html>
+</html>
