--- a/app_interface/views/layouts/main.handlebars
+++ b/app_interface/views/layouts/main.handlebars
@@ -16,17 +16,20 @@
       </div>
 
       <div class="flex items-center justify-evenly">
-        <button
-          class="w-56 mx-4 text-white bg-indigo-700 shadow rounded-xl h-14"
+        <a
+          href="/students"
+          class="flex items-center justify-center w-56 mx-4 text-white bg-indigo-700 shadow rounded-xl h-14"
         >
-          Students
-        </button>
 
-        <button
-          class="w-56 mx-4 text-white bg-indigo-700 shadow rounded-xl h-14"
+          Students
+        </a>
+
+        <a
+          href="/"
+          class="flex items-center justify-center w-56 mx-4 text-white bg-indigo-700 shadow rounded-xl h-14"
         >
           Courses
-        </button>
+        </a>
       </div>
 
     </nav>
