Add assignment pages

--- a/app_interface/views/assignments.handlebars
+++ b/app_interface/views/assignments.handlebars
@@ -49,7 +49,7 @@
                 {{!-- Assignments List --}}
                 <ul>
                     {{#each assignments}}
-                        <li>{{this.title}}</li>
+                        <li><a href="/assignments/{{this.id}}">{{this.title}}</a></li>
                     {{/each}}
                 </ul>
 
