--- a/app_interface/views/courses.handlebars
+++ b/app_interface/views/courses.handlebars
@@ -24,7 +24,7 @@
             <button id = "modal_close" class = "text-white">x</button>
           </div>
 
-          <form id="add-course" method="POST">
+          <form id="add-course" action="/create-course" method="POST">
             <div class="inline-flex flex-col p-4 space-y-4 bg-blue-100">
               <div>
                 <label for="title" class="inline-block w-32 mr-2 text-right">
