--- a/app_interface/views/assignments.handlebars
+++ b/app_interface/views/assignments.handlebars
@@ -20,17 +20,17 @@
             <div class="p-4 bg-blue-50 tab_contents">
 
                 {{!-- Add-assignment button --}}
-                <button id = "modal_open" class = "w-56 mx-4 text-white bg-indigo-400 shadow rounded-2xl h-14">
+                <button class = "w-56 mx-4 text-white bg-indigo-400 shadow rounded-2xl h-14 modal_open">
                     Add Assignment
                 </button>
 
                 {{!-- Add-assignment modal --}}
-                <div id = "modal" class = "modal">
+                <div class = "modal">
                     
                     <div class="flex-col h-32 bg-blue-100 w-96 justify-self-center">
                         <div class = "flex justify-between w-full px-4 text-lg text-white bg-indigo-400">
                             <h1 class = >Add an Assignment</h2>
-                            <button id = "modal_close" class = "text-white">x</button>
+                            <button class = "text-white modal_close">x</button>
                         </div>
 
                         <form id="add-assignment" action="/create-assignment" method="POST" class="flex flex-col items-center justify-center">
@@ -64,7 +64,7 @@
             <div class="p-4 bg-blue-50">
 
                 {{!-- Add-Students button --}}
-                <button id = "modal_open" class = "w-56 mx-4 text-white bg-indigo-400 shadow rounded-2xl h-14">
+                <button class = "w-56 mx-4 text-white bg-indigo-400 shadow rounded-2xl h-14 modal_open">
                     Add Student to Course
                 </button>
 
@@ -73,7 +73,7 @@
                     <div class="flex-col h-32 bg-blue-100 w-96 justify-self-center">
                         <div class = "flex justify-between w-full px-4 text-lg text-white bg-indigo-400">
                             <h1 class = >Add Student to Course</h2>
-                            <button id = "modal_close" class = "text-white">x</button>
+                            <button class = "text-white modal_close">x</button>
                         </div>
 
                         <form id="add-assignment" method="POST" onsubmit="return false;" class = "flex flex-col items-center justify-center">
