Working on updating assignments page

--- a/app_interface/views/assignments.handlebars
+++ b/app_interface/views/assignments.handlebars
@@ -76,7 +76,7 @@
                             <button class = "text-white modal_close">x</button>
                         </div>
 
-                        <form id="add-assignment" method="POST" onsubmit="return false;" class = "flex flex-col items-center justify-center">
+                        <form action="/add-student-to-course" method="POST" class = "flex flex-col items-center justify-center">
                             <div class = "m-4">
                                 <label for="title" class="w-32 mr-2 text-right">
                                 First Name:
