--- a/app_interface/views/classes.handlebars
+++ b/app_interface/views/classes.handlebars
@@ -67,7 +67,7 @@
             {{this.subject}}{{this.course_number}} - {{this.title}}
           </a>
           <div class = "flex flex-row justify-between w-20 text-blue-500 hover:text-blue-800">
-            <button>Edit</button>
+            <button class = "modal_open">Edit</button>
             <button class="js-delete-course-button" data-course-id="{{this.id}}">
               <svg 
                 viewBox="-40 0 427 427.00131" 
@@ -81,6 +81,28 @@
               </svg>
             </button>
           </div>
+
+          {{!-- Edit Course Modal --}}
+          <div class = "modal">
+            <div class="bg-blue-100 w-96 justify-self-center h-72">
+              <div class = "flex justify-between w-full px-4 text-lg text-white bg-indigo-400">
+                <h1 class = >Edit Course</h2>
+                <button class = "modal_close text-white">x</button>
+              </div>
+
+              <form id="edit-course" action="/edit-assignment/{{this.id}}" method="PUT">
+                <div class="inline-flex flex-col p-4 space-y-4 bg-blue-100">
+                  <div>
+                    <label for="title" class="inline-block w-32 mr-2 text-right">
+                      Title:
+                    </label>
+                    <input type="text" id="title" name="title" placeholder="{{this.title}}" class="shadow focus:outline-none focus:placeholder-transparent"/>
+                  <input class="self-end p-2 text-white bg-indigo-400 shadow rounded-xl" type="submit" value="Update Course" />
+                </div>
+              </form>
+            </div>
+          </div>
+
         </li>
       {{/each}}
       </ul>
