Updated interface design. Added forms for inputs

--- a/app_interface/views/classes.handlebars
+++ b/app_interface/views/classes.handlebars
@@ -62,8 +62,8 @@
 
       <ul>
       {{#each courses}}
-        <li class = "bg-white h-14 border border-blue-300 shadow flex flex-row  justify-between items-center p-4 m-2">
-          <a href="/courses/{{this.id}}">
+        <li class = "bg-white h-14 border border-blue-300 shadow flex flex-row  justify-between items-center p-4 m-2 hover:bg-gray-50">
+          <a class = "hover:underline" href="/courses/{{this.id}}">
             {{this.subject}}{{this.course_number}} - {{this.title}}
           </a>
           <div class = "flex flex-row justify-between w-20 text-blue-500 hover:text-blue-800">
