--- a/frontend/views/classes.handlebars
+++ b/frontend/views/classes.handlebars
@@ -6,7 +6,7 @@
   {{!-- Main Div--}}
   <div class = "flex flex-col justify-center w-4/6">
 
-    <h1 class="text-5xl my-2">Classes</h1>
+    <h1 class="text-5xl my-2">Courses</h1>
 
     {{!-- Classes Div--}}
     <div class="p-4 bg-blue-50 flex flex-col">
@@ -90,13 +90,14 @@
                 <button class = "modal_close text-white">x</button>
               </div>
 
-              <form id="edit-course" action="/edit-assignment/{{this.id}}" method="PUT">
+              <form id="edit-course" action="/edit-course/{{this.id}}" method="POST">
                 <div class="inline-flex flex-col p-4 space-y-4 bg-blue-100">
                   <div>
-                    <label for="title" class="inline-block w-32 mr-2 text-right">
+                    <label for="edit-title" class="inline-block w-32 mr-2 text-right">
                       Title:
                     </label>
-                    <input type="text" id="title" name="title" placeholder="{{this.title}}" class="shadow focus:outline-none focus:placeholder-transparent"/>
+                    <input type="text" id="edit-title" name="title" value="{{this.title}}" class="shadow focus:outline-none focus:placeholder-transparent"/>
+                  </div>
                   <input class="self-end p-2 text-white bg-indigo-400 shadow rounded-xl" type="submit" value="Update Course" />
                 </div>
               </form>
